# RAG_Project

./: .gitignore  P2_KEYWORD_RETRIEVAL.md  README.fr.md  README.md  data_process.py  main.py  p1_ingestion.py  p2_keyword_retrieval.py  p3_hybrid_retrieval.py  p4_rag_generate.py  p5_rag_evaluate.py  pyproject.toml  requirements.txt  run_benchmark.py  streamlit_app.py  web_app.py
data/: chunks.jsonl  keyword_eval_queries.jsonl  recipes.jsonl  test.jsonl
docs/: p1_ingestion_report.md
rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
