[project]
name = "rag"
version = "0.1.0"
description = "A small RAG data processing project."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "requests",
    "langchain-core",
    "langchain-text-splitters",
    "langchain-chroma",
    "langchain-huggingface",
    "python-dotenv",
    "sentence-transformers",
    "torch",
    "google-genai",
]
